Fixed bug where footer overlapped bottom of page

--- a/css/contact.css
+++ b/css/contact.css
@@ -2,3 +2,7 @@
   width: 400px;
   height: 400px;
 }
+
+#blank {
+  height: 50px;
+}
